--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -708,6 +708,11 @@
   <x:String x:Key="Text.Submodule.RelativePath" xml:space="preserve">相对仓库路径 ：</x:String>
   <x:String x:Key="Text.Submodule.RelativePath.Placeholder" xml:space="preserve">本地存放的相对路径。</x:String>
   <x:String x:Key="Text.Submodule.Remove" xml:space="preserve">删除子模块</x:String>
+  <x:String x:Key="Text.Submodule.Status" xml:space="preserve">状态</x:String>
+  <x:String x:Key="Text.Submodule.Status.Modified" xml:space="preserve">未提交修改</x:String>
+  <x:String x:Key="Text.Submodule.Status.NotInited" xml:space="preserve">未初始化</x:String>
+  <x:String x:Key="Text.Submodule.Status.RevisionChanged" xml:space="preserve">SHA变更</x:String>
+  <x:String x:Key="Text.Submodule.Status.Unmerged" xml:space="preserve">未解决冲突</x:String>
   <x:String x:Key="Text.Sure" xml:space="preserve">确    定</x:String>
   <x:String x:Key="Text.TagCM.Copy" xml:space="preserve">复制标签名</x:String>
   <x:String x:Key="Text.TagCM.CopyMessage" xml:space="preserve">复制标签信息</x:String>
