About form responds to Cancel button

--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -67,4 +67,9 @@
       </StackPanel>
     </Grid>
   </Grid>
+
+  <Window.KeyBindings>
+    <KeyBinding Gesture="Escape" Command="{Binding #ThisControl.Close}"/>
+  </Window.KeyBindings>
+
 </v:ChromelessWindow>
