--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -10,7 +10,8 @@
                     Title="{DynamicResource Text.About}"
                     Width="520" Height="230"
                     CanResize="False"
-                    WindowStartupLocation="CenterScreen">
+                    ShowInTaskbar="False"
+                    WindowStartupLocation="CenterOwner">
   <Grid RowDefinitions="Auto,*">
     <!-- TitleBar -->
     <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
@@ -62,8 +63,8 @@
           </Button>
         </StackPanel>
 
-
         <TextBlock x:Name="TxtCopyright" Margin="0,40,0,0" Foreground="{DynamicResource Brush.FG2}"/>
+
       </StackPanel>
     </Grid>
   </Grid>
