--- a/src/Views/About.axaml
+++ b/src/Views/About.axaml
@@ -10,7 +10,7 @@
                     Title="{DynamicResource Text.About}"
                     Width="520" Height="230"
                     CanResize="False"
-                    WindowStartupLocation="CenterScreen">
+                    WindowStartupLocation="CenterOwner">
   <Grid RowDefinitions="Auto,*">
     <!-- TitleBar -->
     <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
